--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,13 +1,19 @@
 <div class="" *ngIf="!this.authService.isLoggedIn">
   <h2>Login</h2>
-  <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="form-group">
-    <!-- <label for="username">Usuário</label> -->
-    <input type="text" class="form-control" formControlName="username" placeholder="Usuário" required minlength="3" maxlength="15">
-    <br>
-    <!-- <label for="password">Senha</label> -->
-    <input type="password" class="form-control" formControlName="password" placeholder="Senha" required minlength="3" maxlength="150">
-    <br>
-    <input type="submit" class="btn btn-primary" [disabled]="!loginForm.valid" value="Entrar">
+  <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+    <div class="form-group">
+      <!-- <label for="username">Usuário</label> -->
+      <input type="text" class="form-control" formControlName="username" placeholder="Usuário" required minlength="3" maxlength="15">
+    </div>
+    <div class="form-group">
+      <!-- <label for="password">Senha</label> -->
+      <input type="password" class="form-control" formControlName="password" placeholder="Senha" required minlength="3" maxlength="150">
+    </div>
+
+    <div class="form-group">
+      <input type="submit" class="btn btn-primary" [disabled]="!loginForm.valid" value="Entrar">
+    </div>
+
   </form>
 </div>
 
