--- a/src/app/courses/course-form/course-form.component.html
+++ b/src/app/courses/course-form/course-form.component.html
@@ -1,25 +1,23 @@
-<h3>Cadastro</h3>
+<h3>Cadastro de Cursos</h3>
 
 <form [formGroup]="courseForm" (ngSubmit)="onSubmit()">
-  <label for="_id">
-    ID:
-    <input type="text" formControlName="_id">
-  </label>
-  <br>
-  <label for="name">
-    Nome:
-    <input type="text" formControlName="name" required minlength="3" maxlength="20">
-  </label>
-  <br>
-  <label for="description">
-    Coursename:
-    <input type="text" formControlName="description" required minlength="3" maxlength="20">
-  </label>
-  
-  <br>
-  <input type="submit" [disabled]="!courseForm.valid" value="Salvar">
-  
+    <!-- <div class="form-group">
+      <label for="_id">ID</label>
+      <input type="text" formControlName="_id" class="form-control">
+    </div> -->
+
+    <div class="form-group">
+      <label for="name">Nome</label>
+      <input type="text" formControlName="name" class="form-control" required minlength="3" maxlength="20">
+    </div>
+
+    <div class="form-group">
+      <label for="description">Descrição</label>
+      <textarea formControlName="description" class="form-control" required minlength="3" rows="3"></textarea>
+    </div>
+    
+    <input type="submit" class="btn btn-success my-2 mr-1" [disabled]="!courseForm.valid" value="Salvar">
 </form>
 
-<button  class="btn btn-primary" (click)="onReset()">{{resetButtonText}}</button>
-<button  class="btn btn-primary" (click)="goBack()">{{backButtonText}}</button>
+<button  class="btn btn-warning mr-1" (click)="onReset()">{{resetButtonText}}</button>
+<button  class="btn btn-secondary" (click)="goBack()">{{backButtonText}}</button>
