--- a/src/app/users/user-form/user-form.component.html
+++ b/src/app/users/user-form/user-form.component.html
@@ -1,6 +1,9 @@
+<div class="d-flex justify-content-center">
+  <div class="ngComponentItem">
 <h3>Cadastro de usuários</h3>
 
-<form [formGroup]="userForm" (ngSubmit)="onSubmit()">
+
+<form [formGroup]="userForm" (ngSubmit)="onSubmit()" class="userForm">
   <!-- <div class="form-group">
     <label for="_id">ID</label>
     <input type="text" formControlName="_id" class="form-control">
@@ -40,3 +43,6 @@
 
 <button  class="btn btn-warning mr-1" (click)="onReset()">{{resetButtonText}}</button>
 <button  class="btn btn-secondary" (click)="goBack()">{{backButtonText}}</button>
+
+</div>
+</div>
