--- a/src/app/users/user-list/user-list.component.html
+++ b/src/app/users/user-list/user-list.component.html
@@ -1,3 +1,5 @@
+<div class="d-flex justify-content-center">
+  <div class="ngComponentItem">
 <h2>Usuários</h2>
 <div>
   <fieldset>FILTROS
@@ -43,3 +45,6 @@
 <!-- </div> -->
 
 <app-user-search></app-user-search>
+
+</div>
+</div>
