--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,3 +1,5 @@
+<div class="d-flex justify-content-center">
+  <div class="ngComponentItem">
 <div class="" *ngIf="!this.authService.isLoggedIn">
   <h2>Login</h2>
   <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
@@ -23,5 +25,6 @@
   <button  class="btn btn-danger mr-1" (click)="logout()">Sim</button>
   <button  class="btn btn-secondary" (click)="goBack()">Cancelar</button>
 </div>
-
+</div>
+</div>
 
