Add home component with background image

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -57,11 +57,11 @@
 <router-outlet></router-outlet>
 
 <app-messages></app-messages>
-<ul>
+<!-- <ul>
   <li class="text" *ngFor="let role of roles$ | async">
     {{role._id}} - {{role.name}} - {{role.description}}
   </li>
 </ul>
 
-<img [src]="imageUrl | async" alt="GitHub">
+<img [src]="imageUrl | async" alt="GitHub"> -->
 
