--- a/src/app/home/home/home.component.css
+++ b/src/app/home/home/home.component.css
@@ -2,10 +2,28 @@
   background-image: /*linear-gradient(to bottom, rgba(255, 255, 255, 0.5), rgba(0, 0, 0, 0.5)),*/
                     radial-gradient(circle,rgba(255,255,255,0.2),rgba(0,0,0,0.6)),
                     url('../../../assets/img/hero.jpg');
-  background-color: lightgreen;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
   background-position: 30%;
   height: 100vh;
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: auto; /*Também impede nav bar empurrar para baixo itens desta section*/
+  grid-template-areas: 
+    "."
+    "."
+    "."
+    "."
+    "jumbotronarea";
+}
+
+.jumbotron {
+  padding: 1rem 1rem;
+  opacity: 0.8;
+  border-radius: 0;
+}
+
+.container-item {
+  grid-area: jumbotronarea
 }
