--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -1,4 +1,12 @@
 <div class="container-hero-header">
-  <!-- <img [src]="imageUrl | async" alt="Remote Class using a notebook"> -->
+  <div class="container-item">
+    <div class="jumbotron">
+      <h1 class="display-4">mobCursos</h1>
+      <p class="lead">Inscreva-se ou crie cursos. De qualquer assunto!</p>
+      <hr class="my-4">
+      <p>Faça login ou crie uma conta gratuita como Aluno ou Professor</p>
+      <a class="btn btn-primary btn-lg mr-2" href="#" role="button">Entrar</a>
+      <a class="btn btn-outline-primary btn-lg" href="#" role="button">Criar conta</a>
+    </div>
+  </div>
 </div>
-
