Change home admin

--- a/src/app/home/home-admin/home-admin.component.html
+++ b/src/app/home/home-admin/home-admin.component.html
@@ -1,3 +1,15 @@
-<div class="container-hero-header">
-  
+<div class="container-admin">
+  <div class="container-item">
+    <h2 class="ml-3 pt-4">Painel do Administrador</h2>
+    <div class="container-buttons">
+      <button type="button" routerLink="/users" routerLinkActive="active"
+             class="btn btn-primary btn-lg mt-5 m-3">
+             Gerenciar Usuários
+      </button>
+      <button type="button" routerLink="/courses" routerLinkActive="active"
+             class="btn btn-secondary btn-lg mt-5 m-3">
+             Gerenciar Cursos
+      </button>
+    </div>
+  </div> 
 </div>
