--- a/src/app/home/home-admin/home-admin.component.css
+++ b/src/app/home/home-admin/home-admin.component.css
@@ -1,11 +1,17 @@
-.container-hero-header {
-  background: 
-                    /* radial-gradient(circle,rgba(255, 255, 255, 0.8),rgba(0, 0, 0, 0.082)), */
+.container-admin {
+  background-image: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.5)),
                     url('../../../assets/img/hero.jpg');
-                    opacity: 0.2;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
   background-position: 30%;
   height: 100vh;
+}
+
+/* .container-item {
+
+} */
+
+.container-buttons {
+  max-width: 70%;
 }
