--- a/src/app/home/home/home.component.css
+++ b/src/app/home/home/home.component.css
@@ -1,6 +1,5 @@
 .container-hero-header {
-  background-image: /*linear-gradient(to bottom, rgba(255, 255, 255, 0.5), rgba(0, 0, 0, 0.5)),*/
-                    radial-gradient(circle,rgba(255,255,255,0.2),rgba(0,0,0,0.6)),
+  background-image: radial-gradient(circle,rgba(255,255,255,0.2),rgba(0,0,0,0.6)),
                     url('../../../assets/img/hero.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
