--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -5,8 +5,8 @@
       <p class="lead">Inscreva-se ou crie cursos. De qualquer assunto!</p>
       <hr class="my-4">
       <p>Faça login ou crie uma conta gratuita como Aluno ou Professor</p>
-      <a class="btn btn-primary btn-lg mr-2" href="#" role="button">Entrar</a>
-      <a class="btn btn-outline-primary btn-lg" href="#" role="button">Criar conta</a>
+      <a class="btn btn-primary btn-lg mr-2" routerLink="/login" routerLinkActive="active" role="button">Entrar</a>
+      <a class="btn btn-outline-primary btn-lg" routerLink="/register" routerLinkActive="active" role="button">Criar conta</a>
     </div>
   </div>
 </div>
