Fix table comlum width and buttons spacing

--- a/src/app/courses/course-list/course-list.component.html
+++ b/src/app/courses/course-list/course-list.component.html
@@ -56,8 +56,8 @@
               <td>{{course.name}}</td>
               <td>{{course.description}}</td>
               <td>
-                <button  class="btn btn-primary mx-1" routerLink="edit/{{course._id}}">Editar</button>
-                <button  class="btn btn-danger" routerLink="remove/{{course._id}}">Excluir</button>
+                <button  class="btn btn-primary btn-sm mr-1 my-1" routerLink="edit/{{course._id}}">Editar</button>
+                <button  class="btn btn-danger btn-sm my-1" routerLink="remove/{{course._id}}">Excluir</button>
               </td>
             </tr>
           </tbody>
@@ -90,10 +90,10 @@
                 </li>
               </ol>
             <td *ngIf="isOwnCourses">
-              <button  class="btn btn-primary" *ngIf="isOwnCourses"
+              <button  class="btn btn-primary btn-sm mr-1 my-1" *ngIf="isOwnCourses"
                       routerLink="edit/{{course._id}}">Editar info
               </button>
-              <button  class="btn btn-danger mx-1" (click)="deleteCourse(course._id)">Excluir</button>
+              <button  class="btn btn-danger btn-sm my-1" (click)="deleteCourse(course._id)">Excluir</button>
             </td>
           </tr>
         </table>
@@ -117,10 +117,10 @@
               <td>{{course.description}}</td>
               <td>{{course.teacher.name}}</td>
               <td>
-                <button  class="btn btn-danger" *ngIf="isOwnCourses"
+                <button  class="btn btn-danger btn-sm mr-1 my-1" *ngIf="isOwnCourses"
                         (click)="unsubscribe(course._id)">Cancelar inscrição
                 </button>
-                <button  class="btn btn-success" *ngIf="!isOwnCourses"
+                <button  class="btn btn-success btn-sm my-1" *ngIf="!isOwnCourses"
                         (click)="subscribe(course._id)">Inscrever-se
                 </button>
               </td>
