Change home text

--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -2,7 +2,7 @@
   <div class="container-item">
     <div class="jumbotron">
       <h1 class="display-4">mobCursos</h1>
-      <p class="lead">Inscreva-se ou crie cursos. De qualquer assunto!</p>
+      <p class="lead">Aprenda algo novo ou Crie seu próprio curso. Sobre qualquer assunto!</p>
       <hr class="my-4">
       <p>Faça login ou crie uma conta gratuita como Aluno ou Professor</p>
       <a class="btn btn-primary btn-lg mr-2" routerLink="/login" routerLinkActive="active" role="button">Entrar</a>
