Set sessionCounter position absolute

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -47,7 +47,7 @@
   </div>
 </nav>
 
-<div class="d-flex flex-row justify-content-end m-1">
+<div id="sessionCounter" class="d-flex flex-row justify-content-end m-1">
     <span class="badge badge-secondary" *ngIf="this.authService.isLoggedIn">
       Sessão finaliza em: {{authService.getRemainingSessionTime() | sessionCounter }}
     </span>
