--- a/src/app/home/home-admin/home-admin.component.css
+++ b/src/app/home/home-admin/home-admin.component.css
@@ -1,5 +1,5 @@
 .container-admin {
-  background-image: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.5)),
+  background-image: linear-gradient(to right, rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.5)),
                     url('../../../assets/img/hero.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -13,5 +13,14 @@
 } */
 
 .container-buttons {
-  max-width: 70%;
+  max-width: 60%;
+}
+
+.table {
+  background-color: white;
+  max-width: 50%;
+}
+
+table .quantity {
+  text-align:right;
 }
