Remove gradient from home background image

--- a/src/app/home/home/home.component.css
+++ b/src/app/home/home/home.component.css
@@ -1,5 +1,6 @@
 .container-hero-header {
-  background-image: radial-gradient(circle,rgba(255,255,255,0.2),rgba(0,0,0,0.6)),
+  background-image: 
+  /* radial-gradient(circle,rgba(255,255,255,0.2),rgba(0,0,0,0.6)), */
                     url('../../../assets/img/hero.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
