--- a/src/app/courses/category-list/category-list.component.html
+++ b/src/app/courses/category-list/category-list.component.html
@@ -21,7 +21,7 @@
           <td>{{category.description}}</td>
           <td>
             <button  class="btn btn-primary btn-sm mr-1 my-1" routerLink="edit/{{category._id}}">Editar</button>
-            <button  class="btn btn-danger btn-sm my-1" routerLink="remove/{{category._id}}">Excluir</button>
+            <button  class="btn btn-danger btn-sm my-1"(click)="deleteCategory(category._id)">Excluir</button>
           </td>
         </tr>
       </tbody>
