--- a/src/app/courses/course-form/course-form.component.html
+++ b/src/app/courses/course-form/course-form.component.html
@@ -14,6 +14,17 @@
     </div>
 
     <div class="form-group">
+      <label for="category">Category</label>
+      <select formControlName="category" class="form-control">
+        <!-- TODO: Use following linf when Course model be implemented with Category object, not string -->
+        <!-- <option *ngFor="let category of (categories$ | async) " [ngValue]="category"> -->
+        <option *ngFor="let category of (categories$ | async) " [ngValue]="category.name">
+          {{category.name}}
+        </option>
+      </select>
+    </div>
+
+    <div class="form-group">
       <label for="description">Descrição</label>
       <textarea formControlName="description" class="form-control" required minlength="3" rows="3"></textarea>
     </div>
