--- a/src/app/users/user-list/user-list.component.html
+++ b/src/app/users/user-list/user-list.component.html
@@ -36,8 +36,8 @@
         <td>{{user.username}}</td>
         <td>{{user.email}}</td>
         <td>
-          <button  class="btn btn-primary btn-sm mx-1 mb-1" routerLink="edit/{{user._id}}">Editar</button>
-          <button  class="btn btn-danger btn-sm" (click)="deleteUser(user._id)">Excluir</button>
+          <button  class="btn btn-primary btn-sm mr-1 mb-1" routerLink="edit/{{user._id}}">Editar</button>
+          <button  class="btn btn-danger btn-sm mr-1 mb-1" (click)="deleteUser(user._id)">Excluir</button>
         </td>
       </tr>
     </tbody>
