Change button position

--- a/src/app/courses/course-list/course-list.component.html
+++ b/src/app/courses/course-list/course-list.component.html
@@ -100,7 +100,7 @@
                 </li>
               </ol>
             <td *ngIf="isOwnCourses">
-              <button  class="btn btn-primary btn-sm mr-1 my-1" *ngIf="isOwnCourses"
+              <button  class="btn btn-primary btn-sm mr-1 mb-1" *ngIf="isOwnCourses"
                       routerLink="edit/{{course._id}}">Editar info
               </button>
               <button  class="btn btn-danger btn-sm mr-1 mb-1" (click)="deleteCourse(course._id)">Excluir</button>
