--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -1,4 +1,5 @@
-<div *ngIf="messageService.messages.length">
+<div class="container-messages" *ngIf="messageService.messages.length">
+  <hr>
   <h2>Mensagens</h2>
   <button  class="btn btn-secondary clear"
           (click)="messageService.clear()">Limpar</button>
