--- a/src/app/home/home-admin/home-admin.component.css
+++ b/src/app/home/home-admin/home-admin.component.css
@@ -1,24 +1,27 @@
 .container-admin {
-  background-image: linear-gradient(to right, rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.5)),
+  /* background-image: linear-gradient(to right, rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.5)),
                     url('../../../assets/img/hero.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
   background-position: 30%;
-  height: 100vh;
+  height: 100vh; */
+  display: flex;
+  width: 100%;
 }
 
-/* .container-item {
-
-} */
-
-.container-buttons {
-  max-width: 60%;
+.container-item {
+  margin-top: 2.5rem;
+  margin-left: 2rem;
+  padding: 1rem;
+  background-color: rgb(245, 245, 245);
+  box-shadow: 3px 3px 5px rgb(170, 170, 170);
+  width: 25%;
 }
 
 .table {
   background-color: white;
-  max-width: 50%;
+  /* max-width: 50%; */
 }
 
 table .quantity {
