--- a/src/app/home/home-student/home-student.component.css
+++ b/src/app/home/home-student/home-student.component.css
@@ -1,10 +1,20 @@
-.container-buttons {
-  max-width: 60%;
+.container-student{
+  display: flex;
+  width: 100%;
+}
+
+.container-item {
+  margin-top: 2.5rem;
+  margin-left: 2rem;
+  padding: 1rem;
+  background-color: rgb(245, 245, 245);
+  box-shadow: 3px 3px 5px rgb(170, 170, 170);
+  width: 40%;
 }
 
 .table {
   background-color: white;
-  max-width: 50%;
+  /* max-width: 50%; */
 }
 
 table .quantity {
